--- a/ShipsData/src/main/resources/liquibase/liquibase.properties
+++ b/ShipsData/src/main/resources/liquibase/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile=liquibase/changelog.xml
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:49153/dungeons
+url=jdbc:postgresql://localhost:49153/ships
 username=postgres
 password=postgrespw
