removed related event service, created blank mm service, auth and login should work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:49153/shipsd
+spring.datasource.url=jdbc:postgresql://localhost:49153/ships
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgrespw
